// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated Codex config snapshots (§21.1) > from-scratch install writes the canonical hooks block 1`] = `
"[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.Stop]]
matcher = ""

[[hooks.Stop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15
"
`;

exports[`generated Codex config snapshots (§21.1) > leaves another tool's single-valued notify intact and preserves other keys 1`] = `
"notify = [ "user-notifier", "--flag" ]
model = "gpt-5"

[tui]
theme = "dark"

[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.Stop]]
matcher = ""

[[hooks.Stop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15
"
`;

exports[`generated Codex config snapshots (§21.1) > patches into a config with a same-event user PostToolUse hook + other keys 1`] = `
"model = "o3"
approval_policy = "on-request"

[sandbox]
mode = "workspace-write"

[[hooks.PostToolUse]]
matcher = "Bash"

[[hooks.PostToolUse.hooks]]
type = "command"
command = "my-own-codex-hook"

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15

[[hooks.Stop]]
matcher = ""

[[hooks.Stop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 15
"
`;
